--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
    <h1> This is my first html project.</h1>
+   
+  <!-- <video src="assests/Ronaldo-Success-Motivation-Status-Video.mp4"alt="rolando motivation video"height="500px"/> -->
+   
+   <p>Lorem ipsum dolor sit amet     consectetur adipisicing. <br>
+     Dolorum similique velit itaque vitae nulla iusto? Ea doloribus
+      totam rerum! Sequi error sed animi quae dicta, tempora magnam<hr>
+       maiores at! Totam laborum dicta expedita minima excepturi magni 
+       ipsam cumque similique ad?</p>
+       <image src="img/photo2.jpg"alt="passport size of photo of raees"
+       height="300px"/>
+       <image src="https://phantom-marca.unidadeditorial.es/23b32a9cdc094cf50cbce2fa57c977cd/resize/828/f/jpg/assets/multimedia/imagenes/2022/12/05/16702399461500.jpg" alt="rolando photo"height="500px"/>
+   
+       <!--ancor tag or hyper tag-->
+       <p>Lorem ipsum<b>striver</b> dolor sit amet consectetur adipisicing elit. Excepturi dolorem itaque veritatis esse praesentium iste ad, natus molestias blanditiis quia et laborum sunt quibusdam est laboriosam eligendi in illo illum. Maxime officiis quasi sunt earum id totam fuga veritatis hic enim sint nihil deleniti facilis, doloribus fugiat numquam, voluptas reprehenderit voluptatibus nisi iusto iure praesentium veniam reiciendis? Ipsum accusantium numquam et quaerat, quod rerum? Cupiditate architecto eaque mollitia veritatis iusto. Praesentium nobis accusamus a accusantium nisi veritatis temporibus expedita maxime adipisci, consectetur vitae doloribus? Qui rem vel dignissimos laborum assumenda, blanditiis aliquam, modi unde accusantium incidunt, perferendis iure nihil tenetur.</p>
+       <a href="https://www.google.com/" target="_blank">boys_motivation</a>
+     
+
 </body>
 </html>
