--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
    <h1> This is my first html project.</h1>
+   <nav>
+    <a href="#build1">people</a>
+  </nav>
+  <main>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos enim aut debitis placeat? Corporis porro placeat perspiciatis aut ipsam vitae eaque sapiente blanditiis dolores doloremque autem obcaecati aliquid exercitationem rerum quibusdam itaque veritatis, ad maiores doloribus architecto. Commodi, itaque? Quae reiciendis deleniti similique qui ea, quia quaerat atque repellendus a non distinctio fuga accusantium placeat accusamus ullam incidunt aliquid quam expedita sint suscipit aspernatur obcaecati necessitatibus hic alias! Provident, necessitatibus ut unde obcaecati itaque exercitationem sunt, explicabo quas sequi omnis debitis nisi beatae deserunt sit eum quos ipsum? Ad laborum iste quidem voluptatem sint, repudiandae ducimus omnis. Quos perferendis minus tenetur illum repellendus nobis, cupiditate optio odit sed velit numquam aut esse est consectetur qui molestias repellat sapiente modi maiores ullam autem reiciendis? Possimus, corrupti atque! Praesentium recusandae, voluptas maxime atque laborum saepe, nihil molestias soluta optio quibusdam ea molestiae rerum a consectetur commodi eum tempore esse sequi ipsum. Quis, quibusdam harum. Tempora consequuntur animi sit repudiandae praesentium quam necessitatibus neque, deleniti architecto iusto voluptatum. Qui tempora reiciendis recusandae eaque expedita necessitatibus deserunt dolore officiis sed dolorem nihil doloremque corrupti facere repellendus temporibus dignissimos quos provident voluptates sapiente, officia molestias. Odit molestias pariatur, minima rem facere reprehenderit nemo magnam praesentium! Aliquam totam blanditiis incidunt odit? Nulla, facere voluptate eligendi aliquid dolorem repellat obcaecati commodi. Voluptatem, accusamus laboriosam. Harum assumenda iure rerum, architecto fugiat sunt reprehenderit aperiam repellat perferendis esse nesciunt dolores distinctio itaque libero sint sapiente ratione ut nam fugit repellendus maxime qui perspiciatis veritatis nobis? Exercitationem maxime quidem ex vero sequi ut, aperiam voluptatibus quasi tempore similique voluptas, aliquam accusamus sit asperiores porro esse aspernatur, harum consequuntur rem? Quis ipsam culpa non voluptatum vero, delectus obcaecati neque velit quasi itaque recusandae consequuntur vitae tempore ad distinctio officiis modi quod id eum molestias, mollitia possimus. Ut animi fugiat amet accusamus doloremque facilis qui exercitationem odit, doloribus iusto repellat, perspiciatis dolor laboriosam vero, itaque ea. Voluptas vitae itaque corrupti soluta voluptatibus distinctio fugiat tempora eveniet in similique, maiores nemo voluptate maxime? Soluta tempora laudantium modi nam tempore. At sit quidem, ea facere odit doloribus? Laboriosam iste provident nulla facere corrupti. Itaque at vel quibusdam deleniti reprehenderit eveniet, neque accusantium asperiores cum mollitia voluptate similique tempora optio corporis maiores iste soluta eius tenetur eligendi, dignissimos eos dicta delectus ipsa a. Qui, eaque suscipit? Quis consectetur velit aperiam temporibus, labore provident placeat accusantium, amet laudantium aspernatur consequuntur saepe. Itaque dolorem debitis hic assumenda sit temporibus reiciendis, quibusdam voluptatem, necessitatibus officia ratione quasi fugit reprehenderit enim recusandae sequi voluptatibus eos iste! Commodi explicabo eius minus omnis voluptates quidem, enim accusantium quos soluta, eos ad fugiat, quo nam! Unde laborum officiis facere quod incidunt doloremque sequi, deleniti, maxime nobis labore perspiciatis dolore! Repellat maxime harum temporibus, laboriosam ullam sapiente perferendis impedit alias a? Nobis quaerat, nam maiores blanditiis quas optio quam illum nemo, eaque natus maxime unde, odio architecto tenetur! Quo, dolorem aperiam. Voluptatum, velit corrupti nesciunt esse saepe enim ut impedit expedita, assumenda aspernatur magni itaque dolores possimus labore aliquid perferendis recusandae error eum aliquam cupiditate laboriosam nostrum repellendus. Facere rem natus nulla, nihil sed nesciunt earum, magni adipisci deserunt dolores voluptates. Fugiat sunt asperiores ratione maxime, corporis, laboriosam architecto cupiditate beatae quas totam deserunt. Fugiat placeat tenetur pariatur rerum provident illo fugit dolorum autem odio dolores inventore, quos doloremque necessitatibus voluptatum a dolorem fuga veritatis, excepturi saepe neque maxime aspernatur numquam in? Eius et optio eligendi numquam voluptatibus, aspernatur odit modi? Nesciunt obcaecati eligendi, optio quasi quo ratione accusamus enim laboriosam tenetur totam, dicta nulla deleniti beatae eum? Dolore possimus voluptates nihil, perspiciatis voluptatibus ex deserunt doloribus aut, dignissimos laudantium praesentium eum eius.</p>
+    <p id="build1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, mollitia nulla? Reprehenderit quisquam architecto molestias aperiam fugiat id nesciunt? Mollitia reprehenderit odio nesciunt facilis dicta quam ducimus autem ut fuga!</p>
+  </main>
    
   <!-- <video src="assests/Ronaldo-Success-Motivation-Status-Video.mp4"alt="rolando motivation video"height="500px"/> -->
    
@@ -43,8 +50,16 @@
        (a+b) <sup>2</sup>  =a<sup>2</sup> +b<sup>2</sup>+2ab 
        <br>
        <br>
-       CH<sub>4</sub> + O<sub>2</sub>=>H<sub>2</sub>0 +CO<sub>2</sub>
+     CH<sub>4</sub> + O<sub>2</sub>=>H<sub>2</sub>0 +CO<sub>2</sub>
     </p>
+   <div>
 
+   <p>this 
+    is div</p>
+   <big>this is my class</big>
+   </div>
+ 
+
+  
 </body>
 </html>
