--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="scripts/script.js"></script>
-    <link rel="stylesheet" href="STYLES/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempore voluptatum quasi unde autem, dolore delectus iure veniam soluta eveniet et quisquam labore culpa obcaecati nostrum voluptatem quibusdam. Sed, quisquam!</h1>
-    
-</body>
+    <h1 class="centre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, minus.</h1>
+    <p>trum voluptatem quibusdam. Sed, quisquam! labore assumenda deleniti p
+        xpedita quidem cupiditate magnam similique doloribus aliquam repellendus 
+        exercitationem reprehenderit culpa quaerat optio cum quae sapiente consect
+        etur quia! Magni rerum earum dolore consequatur nostrum atque ipsum conse
+        quuntur accusantium omnis! Consequuntur veritatis repellat amet vitae est 
+        harum tenetur, cum, natus beatae, eligendi facere aspernatur consequatur 
+        aliquam minus debitis assumenda blanditiis sequi nemo corrupti sint? Non 
+        eveniet maiores voluptatum, adipisci necessitatibus porro quas veniam imp
+        edit eius magni reprehenderit exercitationem eaque aliquam, nam reiciendis
+        ? Cupiditate, ipsa molestiae magnam dicta praesentium nisi.</p>
+        <h1 class="back">Red and center-aligned heading</h1>
+
+ <h1  class="centre">Hello World</h1> 
+ 
+<p class="one">A solid red border</p>
+<p class="two">A solid green border</p>
+<p class="three">A dotted blue border</p>
 </html>
