--- a/html/index.html
+++ b/html/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="scripts/script.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
+   
+  
 </head>
 <body>
-    <h1 class="centre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, minus.</h1>
-    <p>trum voluptatem quibusdam. Sed, quisquam! labore assumenda deleniti p
-        xpedita quidem cupiditate magnam similique doloribus aliquam repellendus 
-        exercitationem reprehenderit culpa quaerat optio cum quae sapiente consect
-        etur quia! Magni rerum earum dolore consequatur nostrum atque ipsum conse
-        quuntur accusantium omnis! Consequuntur veritatis repellat amet vitae est 
-        harum tenetur, cum, natus beatae, eligendi facere aspernatur consequatur 
-        aliquam minus debitis assumenda blanditiis sequi nemo corrupti sint? Non 
-        eveniet maiores voluptatum, adipisci necessitatibus porro quas veniam imp
-        edit eius magni reprehenderit exercitationem eaque aliquam, nam reiciendis
-        ? Cupiditate, ipsa molestiae magnam dicta praesentium nisi.</p>
-        <h1 class="back">Red and center-aligned heading</h1>
-
- <h1  class="centre">Hello World</h1> 
- 
-<p class="one">A solid red border</p>
-<p class="two">A solid green border</p>
-<p class="three">A dotted blue border</p>
+    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe adipisci magni totam doloremque, in, neque consectetur minima corrupti sit ea deleniti voluptates cumque modi aspernatur! Officiis quos veniam eum. Et?</h1>
+    <h1 class="h1">Positive Compounding</h1>
+    <div>
+  
+    <p class="one"><strong>Productivity compounds</strong>Accomplishing one extra task is a small feat on any given day,
+        but it counts for a lot over an entire career. The effect of automating an old task or
+        mastering a new skill can be even greater. The more tasks you can handle without
+        thinking, the more your brain is free to focus on other areas</p>
+    <p class="two"><strong>Knowledge compounds.</strong> Learning one new idea won’t make you a genius, but a
+        commitment to lifelong learning can be transformative. Furthermore, each book you read
+        not only teaches you something new but also opens up different ways of thinking about old
+        ideas. As Warren Buffett says, “That’s how knowledge works. It builds up, like compound
+        interest.</p>
+    <p class="three"><strong>Relationships compound.</strong> People reflect your behavior back to you. The more you help
+        others, the more others want to help you. Being a little bit nicer in each interaction can
+        result in a network of broad and strong connections over time.</p>
+        </div>
+</body>
 </html>
